Add landscape dialog to On this day screen

--- a/app/src/main/res/layout-land/date_picker_dialog.xml
+++ b/app/src/main/res/layout-land/date_picker_dialog.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="320dp"
-    android:layout_height="432dp"
-    android:background="?attr/paper_color"
-    android:orientation="vertical">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
     <include
         layout="@layout/date_picker_header"
-        android:layout_width="match_parent"
-        android:layout_height="110dp"/>
+        android:layout_width="168dp"
+        android:layout_height="match_parent"/>
 
     <include
         layout="@layout/date_picker_day_picker"
-        android:layout_width="match_parent"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"/>
 
 </LinearLayout>
